--- a/learning_logs/templates/learning_logs/new_topic.html
+++ b/learning_logs/templates/learning_logs/new_topic.html
@@ -3,7 +3,7 @@
 {%block content%}
 <p>Add a new topic:</p>
 
-<form action="{%url 'new_topic'%}" method="post">
+<form method="post">
       {%csrf_token%}
       {{form.as_p}}
       <button name="submit">add topic</button>
